--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Jbx-cv-Bsn">
                         <nil key="title"/>
-                        <button key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" id="so8-8g-e38">
+                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" id="so8-8g-e38">
                             <rect key="frame" x="12" y="1" width="390" height="42"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Button" image="searchbar"/>
@@ -290,7 +290,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="LiW-4H-3jg">
                         <nil key="title"/>
-                        <button key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" id="gTw-ZG-AWZ">
+                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" id="gTw-ZG-AWZ">
                             <rect key="frame" x="12" y="1" width="390" height="42"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Button" image="searchbar"/>
@@ -637,24 +637,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Gqf-hE-fIq">
-                                <rect key="frame" x="182" y="423" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="CU5-tn-5x1"/>
-                                    <constraint firstAttribute="height" constant="50" id="VN4-3r-6za"/>
-                                </constraints>
-                                <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ZCj-kS-Tj0" firstAttribute="top" secondItem="oKV-m5-Al9" secondAttribute="top" constant="10" id="5mw-cZ-Ikz"/>
                             <constraint firstItem="ZCj-kS-Tj0" firstAttribute="trailing" secondItem="oKV-m5-Al9" secondAttribute="trailing" constant="-10" id="Fh3-cV-tJI"/>
                             <constraint firstItem="3Vd-4X-EhU" firstAttribute="centerY" secondItem="gFT-7K-K98" secondAttribute="centerY" id="Ms4-lZ-x8a"/>
-                            <constraint firstItem="Gqf-hE-fIq" firstAttribute="centerX" secondItem="gFT-7K-K98" secondAttribute="centerX" id="Ocr-6W-0g2"/>
                             <constraint firstItem="oKV-m5-Al9" firstAttribute="trailing" secondItem="3Vd-4X-EhU" secondAttribute="trailing" constant="10" id="cra-fF-lE9"/>
                             <constraint firstItem="oKV-m5-Al9" firstAttribute="bottom" secondItem="ZCj-kS-Tj0" secondAttribute="bottom" constant="10" id="ozM-Qo-F1a"/>
-                            <constraint firstItem="Gqf-hE-fIq" firstAttribute="centerY" secondItem="gFT-7K-K98" secondAttribute="centerY" id="pMk-sf-Mdt"/>
                             <constraint firstItem="3Vd-4X-EhU" firstAttribute="centerX" secondItem="gFT-7K-K98" secondAttribute="centerX" id="vMk-Mv-Krk"/>
                             <constraint firstItem="ZCj-kS-Tj0" firstAttribute="leading" secondItem="oKV-m5-Al9" secondAttribute="leading" constant="10" id="zzf-WN-Oov"/>
                         </constraints>
@@ -675,7 +665,6 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="activityIndicator" destination="Gqf-hE-fIq" id="Xm2-ls-aqp"/>
                         <outlet property="itemCollection" destination="ZCj-kS-Tj0" id="nrH-uS-sUk"/>
                         <outlet property="resultSearchNotification" destination="3Vd-4X-EhU" id="noy-WT-eZ9"/>
                         <outlet property="searchBar" destination="IDw-Zc-xGf" id="4pj-nC-yxR"/>
@@ -1061,7 +1050,7 @@
         <image name="store(1)" width="23" height="23"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="9zj-Eq-LIz"/>
+        <segue reference="WYP-LC-rZ2"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
