--- a/notritionVendorsAPP/View/AccountDetail.storyboard
+++ b/notritionVendorsAPP/View/AccountDetail.storyboard
@@ -139,6 +139,7 @@
                         <segue destination="sdt-M8-uS0" kind="show" identifier="AccountToComment" id="bge-Oj-lBl"/>
                         <segue destination="VV2-md-XX2" kind="show" identifier="AccountToPassword" id="XA3-IY-4mP"/>
                         <segue destination="DIu-bc-Fba" kind="show" identifier="AccountToEditInfor" id="Ko9-CA-U3K"/>
+                        <segue destination="tK7-jG-D2u" kind="push" id="rk9-Ht-2dX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="khJ-py-MN8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -284,6 +285,127 @@
             </objects>
             <point key="canvasLocation" x="815" y="3851"/>
         </scene>
+        <!--Feeback Controller-->
+        <scene sceneID="fJE-tt-34u">
+            <objects>
+                <viewController id="tK7-jG-D2u" customClass="FeebackController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wsW-R4-vnn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   Product for feeback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIB-2g-dcg">
+                                <rect key="frame" x="0.0" y="64" width="375" height="35"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="0.65873822773972601" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="pDs-YG-kJB"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="qIz-ai-TL6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pn3-gu-7WV">
+                                <rect key="frame" x="10" y="109" width="355" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="nY4-Uq-ckm"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="product:" destination="zug-al-dvw" eventType="editingDidEnd" id="j9d-wU-kkX"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCG-Cs-HaK">
+                                <rect key="frame" x="0.0" y="154" width="375" height="35"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="0.65873822770000001" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="yJ0-hg-lEn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="K50-82-2Cf">
+                                <rect key="frame" x="10" y="199" width="355" height="468"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="laz-Ig-XvP">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="h81-qh-DKB"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G1m-fd-784">
+                                        <rect key="frame" x="0.0" y="45" width="355" height="35"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vg2-FY-xwo">
+                                        <rect key="frame" x="0.0" y="90" width="355" height="35"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter content" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xkS-gY-jNN">
+                                        <rect key="frame" x="0.0" y="135" width="355" height="333"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="xkS-gY-jNN" firstAttribute="width" secondItem="K50-82-2Cf" secondAttribute="width" id="Fgd-z4-axB"/>
+                                    <constraint firstItem="G1m-fd-784" firstAttribute="width" secondItem="K50-82-2Cf" secondAttribute="width" id="ZWF-kN-FUk"/>
+                                    <constraint firstItem="G1m-fd-784" firstAttribute="height" secondItem="laz-Ig-XvP" secondAttribute="height" id="e1T-Op-fMn"/>
+                                    <constraint firstItem="vg2-FY-xwo" firstAttribute="height" secondItem="laz-Ig-XvP" secondAttribute="height" id="jJt-p9-NYC"/>
+                                    <constraint firstItem="laz-Ig-XvP" firstAttribute="width" secondItem="K50-82-2Cf" secondAttribute="width" id="l8z-1z-MOZ"/>
+                                    <constraint firstItem="vg2-FY-xwo" firstAttribute="width" secondItem="K50-82-2Cf" secondAttribute="width" id="tWX-Ey-7m0"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Lbj-KO-WIB" firstAttribute="trailing" secondItem="yIB-2g-dcg" secondAttribute="trailing" id="C6H-mz-20a"/>
+                            <constraint firstItem="pn3-gu-7WV" firstAttribute="top" secondItem="yIB-2g-dcg" secondAttribute="bottom" constant="10" id="IJ6-U5-71r"/>
+                            <constraint firstItem="Lbj-KO-WIB" firstAttribute="bottom" secondItem="K50-82-2Cf" secondAttribute="bottom" id="KQR-PI-FiB"/>
+                            <constraint firstItem="bCG-Cs-HaK" firstAttribute="top" secondItem="pn3-gu-7WV" secondAttribute="bottom" constant="10" id="Ocx-rS-oOn"/>
+                            <constraint firstItem="pn3-gu-7WV" firstAttribute="leading" secondItem="Lbj-KO-WIB" secondAttribute="leading" constant="10" id="PMU-I6-7MQ"/>
+                            <constraint firstItem="Lbj-KO-WIB" firstAttribute="trailing" secondItem="bCG-Cs-HaK" secondAttribute="trailing" id="SjX-Dm-aFL"/>
+                            <constraint firstItem="Lbj-KO-WIB" firstAttribute="trailing" secondItem="pn3-gu-7WV" secondAttribute="trailing" constant="10" id="Ypz-Nj-euZ"/>
+                            <constraint firstItem="Lbj-KO-WIB" firstAttribute="trailing" secondItem="K50-82-2Cf" secondAttribute="trailing" constant="10" id="d2O-J9-OQ9"/>
+                            <constraint firstItem="yIB-2g-dcg" firstAttribute="top" secondItem="Lbj-KO-WIB" secondAttribute="top" id="fyW-BM-Vfs"/>
+                            <constraint firstItem="K50-82-2Cf" firstAttribute="leading" secondItem="Lbj-KO-WIB" secondAttribute="leading" constant="10" id="gg3-CJ-A8E"/>
+                            <constraint firstItem="bCG-Cs-HaK" firstAttribute="leading" secondItem="Lbj-KO-WIB" secondAttribute="leading" id="hRN-FY-EMz"/>
+                            <constraint firstItem="K50-82-2Cf" firstAttribute="top" secondItem="bCG-Cs-HaK" secondAttribute="bottom" constant="10" id="mfy-mA-kXT"/>
+                            <constraint firstItem="yIB-2g-dcg" firstAttribute="leading" secondItem="Lbj-KO-WIB" secondAttribute="leading" id="zvk-sb-SBg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Lbj-KO-WIB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="op5-tJ-pK4">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="U5H-Pm-1Ca">
+                            <connections>
+                                <action selector="donePressed:" destination="tK7-jG-D2u" id="ENm-Mc-roH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="content" destination="xkS-gY-jNN" id="281-MK-rUh"/>
+                        <outlet property="email" destination="vg2-FY-xwo" id="sOE-EP-im0"/>
+                        <outlet property="name" destination="laz-Ig-XvP" id="0FQ-f5-sAN"/>
+                        <outlet property="phone" destination="G1m-fd-784" id="1yM-Af-FbY"/>
+                        <outlet property="product" destination="pn3-gu-7WV" id="vgs-8Y-Mpq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kQY-wg-95D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="zug-al-dvw" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1604" y="3840"/>
+        </scene>
         <!--CommentStoryboardID-->
         <scene sceneID="uLW-QY-oiT">
             <objects>
@@ -415,8 +537,12 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5JM-zS-T40">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.25490196079999999" green="0.66274509800000003" blue="0.68235294120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.77647058820000003" green="0.0039215686269999999" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.77647058820000003" green="0.0039215686269999999" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
