--- a/notritionVendorsAPP/Controller/detail food/view/ActionCell.xib
+++ b/notritionVendorsAPP/Controller/detail food/view/ActionCell.xib
@@ -20,10 +20,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Das-cp-Snj">
-                        <rect key="frame" x="0.0" y="0.0" width="501" height="33"/>
+                        <rect key="frame" x="0.0" y="0.0" width="501" height="50.5"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s2e-sq-fc2">
-                                <rect key="frame" x="0.0" y="0.0" width="250.5" height="33"/>
+                                <rect key="frame" x="0.0" y="0.0" width="167" height="50.5"/>
                                 <color key="backgroundColor" red="0.93205014556584054" green="0.59336709901643381" blue="0.14456778072336396" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="yEh-ti-kcS"/>
@@ -34,9 +34,21 @@
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bEi-CX-Izn">
-                                <rect key="frame" x="250.5" y="0.0" width="250.5" height="33"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bT-H8-bfr">
+                                <rect key="frame" x="167" y="0.0" width="167" height="50.5"/>
                                 <color key="backgroundColor" red="0.77647058820000003" green="0.0039215686269999999" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="kgU-7S-l6d"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Chat">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bEi-CX-Izn">
+                                <rect key="frame" x="334" y="0.0" width="167" height="50.5"/>
+                                <color key="backgroundColor" red="0.93333333330000001" green="0.59215686270000001" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Delivery">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -60,7 +72,7 @@
                 <outlet property="delivery" destination="bEi-CX-Izn" id="B6i-tj-Jlq"/>
                 <outlet property="viewMore" destination="s2e-sq-fc2" id="zyh-JM-r8u"/>
             </connections>
-            <point key="canvasLocation" x="-12" y="154.72263868065968"/>
+            <point key="canvasLocation" x="-497" y="107"/>
         </tableViewCell>
     </objects>
 </document>
