--- a/notritionVendorsAPP/View/Chat.storyboard
+++ b/notritionVendorsAPP/View/Chat.storyboard
@@ -10,20 +10,69 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="pDg-Hm-AZ6">
+        <!--Chat Controller-->
+        <scene sceneID="bf7-Co-Sqv">
             <objects>
-                <viewController id="2qK-Jw-s31" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="a8I-lm-eYJ">
+                <viewController id="HA6-XU-uzh" customClass="ChatController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yIa-2h-F3B">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lW7-vR-0jX">
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gmc-7b-b5a">
+                                        <rect key="frame" x="10" y="10" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="a8y-fu-TwB"/>
+                                            <constraint firstAttribute="width" constant="30" id="tdN-UR-wJd"/>
+                                        </constraints>
+                                        <state key="normal" image="arrow-back-icon">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backBtnPressed:" destination="HA6-XU-uzh" eventType="touchUpInside" id="3pk-Fq-KOo"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u31-iW-VC2">
+                                        <rect key="frame" x="55" y="10" width="320" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.77647058820000003" green="0.0039215686269999999" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="AK3-j2-VYc"/>
+                                    <constraint firstItem="Gmc-7b-b5a" firstAttribute="leading" secondItem="lW7-vR-0jX" secondAttribute="leading" constant="10" id="DCs-pX-MuZ"/>
+                                    <constraint firstItem="u31-iW-VC2" firstAttribute="top" secondItem="lW7-vR-0jX" secondAttribute="top" constant="10" id="GNd-2v-qwj"/>
+                                    <constraint firstItem="Gmc-7b-b5a" firstAttribute="top" secondItem="lW7-vR-0jX" secondAttribute="top" constant="10" id="SRd-8E-MKt"/>
+                                    <constraint firstItem="u31-iW-VC2" firstAttribute="leading" secondItem="Gmc-7b-b5a" secondAttribute="trailing" constant="15" id="WRJ-fP-bnv"/>
+                                    <constraint firstAttribute="bottom" secondItem="Gmc-7b-b5a" secondAttribute="bottom" constant="10" id="fVa-dK-RU4"/>
+                                    <constraint firstAttribute="bottom" secondItem="u31-iW-VC2" secondAttribute="bottom" constant="10" id="oc7-zj-vxs"/>
+                                    <constraint firstAttribute="trailing" secondItem="u31-iW-VC2" secondAttribute="trailing" id="vqA-1L-srZ"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="KRg-TM-Ie0"/>
+                        <constraints>
+                            <constraint firstItem="lW7-vR-0jX" firstAttribute="top" secondItem="NzB-p5-Zep" secondAttribute="top" id="VWt-sh-583"/>
+                            <constraint firstItem="lW7-vR-0jX" firstAttribute="trailing" secondItem="NzB-p5-Zep" secondAttribute="trailing" id="eqW-MD-FFb"/>
+                            <constraint firstItem="lW7-vR-0jX" firstAttribute="leading" secondItem="NzB-p5-Zep" secondAttribute="leading" id="mZD-rw-zCI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="NzB-p5-Zep"/>
                     </view>
+                    <connections>
+                        <outlet property="backBtn" destination="Gmc-7b-b5a" id="POr-9k-9d2"/>
+                        <outlet property="shopName" destination="u31-iW-VC2" id="3ji-r9-x7y"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ljO-pS-6ZK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dGu-cm-hCc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-194" y="133"/>
+            <point key="canvasLocation" x="-274.39999999999998" y="160.56971514242881"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow-back-icon" width="25" height="25"/>
+    </resources>
 </document>
